<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context="com.example.nouran.ecommerce.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/create_a_new_account"
            android:textColor="#fff"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_mail_black_24dp"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHighlight="#ffffff" />

        <EditText
            android:id="@+id/reg_u_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:hint="Username"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHighlight="#ffffff" />

        <EditText
            android:id="@+id/reg_c_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/customer_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHighlight="#ffffff" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHighlight="#ffffff" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFF"
                android:elevation="8dp"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/reg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/email_password_editbox"
                android:drawablePadding="10dp"
                android:hint="@string/gender"
                android:inputType="text"
                android:orientation="horizontal"
                android:padding="15dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:drawableLeft="@drawable/ic_gender_black_24dp"
                    android:text="Female"
                    android:checked="false"
                    android:id="@+id/female"/>

                <RadioButton
                    android:id="@+id/male"
                    android:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_gender_black_24dp"
                    android:text="Male" />

            </RadioGroup>

            <!--<EditText-->
            <!--android:id="@+id/reg_gender"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="6dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:background="@drawable/email_password_editbox"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:hint="@string/gender"-->
            <!--android:inputType="text"-->
            <!--android:padding="15dp"-->
            <!--android:textColorHighlight="#ffffff" />-->
        </FrameLayout>

        <EditText
            android:id="@+id/reg_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_work_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/job_title"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHighlight="#ffffff" />

        <TextView
            android:id="@+id/reg_birth"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/email_password_editbox"
            android:drawableLeft="@drawable/ic_cake_black_24dp"
            android:text="@string/birthdate"
            android:textSize="21sp" />


        <Button
            android:id="@+id/createAccount_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="17dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/back"
            android:padding="20dp"
            android:text="@string/create_account"
            android:textColor="#1c7981" />

    </LinearLayout>
</ScrollView>